# OpenSub

./: .gitignore  LICENSE  Makefile  README.md  env.example  foundry.toml
.github/workflows/: ci.yml
aa-rs/: Cargo.toml  README.md  env.example
aa-rs/src/: bundler.rs  config.rs  encoding.rs  main.rs  paymaster.rs  types.rs
deployments/: anvil.example.json  base-sepolia.json
docs/: ALLOWANCE_POLICY.md  CODEX_SINCE_M5_TEST_PROMPT.md  EXTENSIVE_TEST_REPORT.md  FRONTEND_HANDOFF.md  KEEPER_TEST_REPORT.md  LOG_SCANNING.md  MILESTONE1.md  MILESTONE4_REQUIREMENTS.md  MILESTONE5.md  MILESTONE5_1.md  MILESTONE6A.md  MILESTONE6B.md  SINCE_M5_CHANGES.md  SINCE_M5_TEST_REPORT.md  SPEC.md  THREAT_MODEL.md  UI_STATE_MACHINE.md  base-sepolia-handoff.md
frontend/: README.md  env.example  package-lock.json  package.json
frontend/abi/: erc20Abi.ts  openSubAbi.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: Nav.tsx
frontend/config/: addresses.example.ts  addresses.ts  tokens.example.ts  tokens.ts
keeper-rs/: .gitignore  Cargo.toml  Dockerfile  README.md
keeper-rs/src/: collector.rs  config.rs  deployments.rs  erc20.rs  main.rs  opensub.rs  scanner.rs  state.rs
script/: DemoScenario.s.sol  DeployDemo.s.sol  DeployOpenSub.s.sol  PrintFrontendConfig.s.sol  demo_local.sh  install_deps.sh  keeper_self_test.sh  package_repo.sh
src/: OpenSub.sol
test/: OpenSubCancel.t.sol  OpenSubCollect.t.sol  OpenSubPlan.t.sol  OpenSubReentrancy.t.sol  OpenSubSmoke.t.sol  OpenSubSubscribe.t.sol  OpenSubTokenFailures.t.sol
(+37 files in other folders)
