[package]
name = "opensub-aa"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "OpenSub Milestone 6A: ERC-4337 subscribe CLI (Rust)"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
ethers = { version = "2", features = ["rustls"] }
hex = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
