[package]
name = "opensub-keeper"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "OpenSub Milestone 5 keeper bot (Rust): scans Subscribed logs and calls collect() for due subscriptions."

[dependencies]
ethers = { version = "2.0", features = ["abigen", "rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures = "0.3"
fs2 = "0.4"

[profile.release]
# slightly faster build, still good for ops tooling
lto = "thin"
codegen-units = 1
